--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
     "postcss-loader": "^2.1.6",
+    "raycast-dom": "^1.0.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "7.2.0",
