--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@toast-ui/react-image-editor": "^1.2.0",
     "ajv": "6.12.0",
     "autoprefixer": "^9.1.0",
     "axios": "0.19.2",
