--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "postcss-loader": "^2.1.6",
     "raycast-dom": "^1.0.7",
     "react": "16.13.1",
+    "react-color": "^2.18.1",
     "react-dom": "16.13.1",
     "react-redux": "7.2.0",
     "react-router": "5.1.2",
